# redeye

./: .dockerignore  .gitignore  Dockerfile  README.md  debug_load.py  debug_regex.py  diagnose_torch.py  inspect_datasets.py  inspect_langchain.py  main.py  pyproject.toml  reproduce_issue.py  save_final_model.py  train_detection.py  upload_models.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  ScanPage.tsx  api.ts  main.tsx  theme.ts
frontend/src/pages/: ModelsPage.tsx
n8n/: docker-compose.yml  github_scan_workflow.json
scripts/: check_balance.py  inspect_dataset.py  preprocess_circl.py  quantize_and_save.py  save_repair_model.py  train_detection_v2.py  train_repair_lora.py  train_repair_v2.py  train_repair_v3.py  verify_model.py
src/: agent.py  config.py  database.py  expert_model.py  github_diff_scanner.py  rag_engine.py  repo_scanner.py  zap_scanner.py
src/api/: analysis.py
src/auth/: github.py
src/data/: trainer_state.json
src/legacy/: zap_scanner.py
src/redeye/: __init__.py
src/services/: training_metrics.py
tests/: vuln_test.py
tests/multi_lang_vulns/: vuln_go.go  vuln_js.js  vuln_python.py
